--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start-dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.1.2",
