--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "starter-code",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.16.3"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
