--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-session": "^1.17.0",
     "hbs": "^4.0.1",
+    "http-errors": "^1.7.3",
     "jquery": "^3.4.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
