--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# # Dependency directory
-# node_modules
+# Dependency directory
+node_modules
 
-# # Debug log from npm
-# npm-debug.log
+# Debug log from npm
+npm-debug.log
 
-# # Environment Variables should NEVER be published
-# .env
-# © 2019 GitHub, Inc.
+# Environment Variables should NEVER be published
+.env
+© 2019 GitHub, Inc.
