--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start-dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^3.0.7",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.1.2",
     "cookie-parser": "^1.4.3",
@@ -28,7 +28,8 @@
     "newsapi": "^2.4.0",
     "node-sass-middleware": "^0.11.0",
     "node-summary": "^1.2.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "text-summary": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
